--- a/NumberSorter/NumberSorter.WebUI/Views/SortedNumbers/Details.cshtml
+++ b/NumberSorter/NumberSorter.WebUI/Views/SortedNumbers/Details.cshtml
@@ -6,38 +6,25 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details for sorted number list</h1>
 
-<div>
-    <h4>SortedNumbersViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            Initial Values
-        </dt>
-        <dd class = "col-sm-10">
-            @Model.InitialValues
-        </dd>
-        <dt class="col-sm-2">
-            Sorted Values
-        </dt>
-        <dd class="col-sm-10">
-            @string.Join(",", Model.SortedValues)
-        </dd>
-        <dt class="col-sm-2">
-            Sort Time
-        </dt>
-        <dd class="col-sm-10">
-            @Model.SortTime
-        </dd>
-        <dt class="col-sm-2">
-            Orderd By
-        </dt>
-        <dd class="col-sm-10">
-            @(Model.IsAscending ? "Ascending" : "Descending")
-        </dd>
-    </dl>
-</div>
+<dl class="row">
+    <dt class="col-sm-2">ID</dt>
+    <dd class="col-sm-10">@Model.Id</dd>
+
+    <dt class="col-sm-2">Initial Values</dt>
+    <dd class="col-sm-10">@Model.InitialValues</dd>
+
+    <dt class="col-sm-2">Sorted Values</dt>
+    <dd class="col-sm-10">@string.Join(",", @Model.SortedValues)</dd>
+
+    <dt class="col-sm-2">Ordered By</dt>
+    <dd class="col-sm-10">@(Model.IsAscending ? "Ascending" : "Descending")</dd>
+
+    <dt class="col-sm-2">Sort Time</dt>
+    <dd class="col-sm-10">@Model.SortTime</dd>
+</dl>
+
 <div>
     @Html.ActionLink("Delete", "Delete", new { Model.Id }) |
     <a asp-action="Index">Back to List</a>
