chore: updated the text on the home page

--- a/NumberSorter/NumberSorter.WebUI/Views/Home/Index.cshtml
+++ b/NumberSorter/NumberSorter.WebUI/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Welcome to Jonathan's version of the Number Sorter</h1>
+    <hr>
+    <p>This project allows the user to sort a list of numbers (comma-seperated), record how long it took to sort that list and then stores it within a SQL database.</p>
+    <p>The user is also able to see all of the sorted numbers that have been created, and view and delete existing sorted numbers.</p>
+    <p>To view all the sorted numbers use the navigation above or click here: <a asp-action="Index" asp-controller="SortedNumbers">Sorted Numbers</a>.</p>
 </div>
